2008-04-13       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-iso:  moved to
	* gm2/gm2-libs-iso:  instead
	* gm2/Make-lang.in:  altered source rules to reflect
	  changes in directory.
	* gm2/gm2/gm2-libs/SYSTEM.def:  added @SYSTEM_TYPES@
	  as a marker for gm2/tools-src/makeSystem to add
	  inbuilt types.
	* gm2/gm2/tools-src/def2texi.py:  modified to reflect
	  new directory.  Also allowed indices to be created
	  from opaque types.  Fixed unique module list bug.
	* gm2/tools-src/makeSystem:  adds opaque types to
	  SYSTEM.def

2008-04-12       Gaius Mulley <gaius@gnu.org>

	* gm2/bnf/m2-2.bnf:  reverted patch from 2008-03-18
	  so that testsuite/pim/pass/impf.mod and
	  ulm-lib-gm2/std/GetPass.mod compile.
	* gm2/gm2-compiler/M2Base.mod:  TRUNC, TRUNCS and TRUNCL
	  are declared to return an unsigned value if -fpim2,
	  -fpim3 or -fiso are specified.  They return signed
	  values if -fpim4 is specified.
	* gm2/gm2-compiler/M2Range.mod:  dereferences L values
	  correctly in CodeAssignment.
	* gm2/ulm-lib-gm2/std/M2RTS.mod:  updated to export the
	  new exception handler procedures expected by gm2.
	* gm2/gm2-compiler/M2Base.mod:  use IsFloat and IsTrunc
	  rather compare Sym to function symbols in
	  IsPseudoBaseFunction.  Fixes six regression tests.
	* gm2/gm2-compiler/M2Range.mod:  avoid range checking
	  ADDRESS expressions.

2008-04-11       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-ch/sckt.c:  use memset, memcpy to avoid using
	  bcopy and bzero which were poisoned during make gm2.paranoid.
	* gm2/gccgm2.c:  fixed major bug in function call handling.
	* gm2/tools-src/makeSystem:  new file which creates SYSTEM.def
	  for the target which contains an export list of all supported
	  datatypes.
	* gm2/gm2-libs.texi:  removed as it will be built in the build
	  directory.
	* gm2/gm2-ebnf.texi:  removed as it will be built in the build
	  directory.
	* gm2/Make-lang.in:  build gm2/gm2-libs/SYSTEM.def,
	  gm2/gm2-ebnf.texi and gm2/gm2-libs.texi.