@@ -1427,123 +1427,7 @@ be in-lined you need to specify the @samp{-ffast-math -O} options.
 @node The PIM system module, The ISO system module, Built-ins, Using
 @section The PIM system module
 
-@example
-DEFINITION MODULE SYSTEM ;
-
-EXPORT QUALIFIED (* the following are built into the compiler: *)
-                 ADDRESS, WORD, BYTE, BITSET,
-                 ADR, TSIZE, SIZE, ROTATE, SHIFT ;
-
-(*
-   all the procedures below are declared internally to gm2
-   ======================================================
-
-PROCEDURE ADR (VAR v: <anytype>): ADDRESS;
-  (* Returns the address of variable v. *)
-
-PROCEDURE SIZE (v: <type>) : CARDINAL;
-  (* Returns the number of BYTES used to store a v of
-     any specified <type>.
-  *)
-
-PROCEDURE TSIZE (<type>) : CARDINAL;
-  (* Returns the number of BYTES used to store a value of the
-     specified <type>.
-  *)
-
-PROCEDURE ROTATE (val: <a set type>;
-                  num: INTEGER): <type of first parameter>;
-  (* Returns a bit sequence obtained from val by rotating up or down
-     (left or right) by the absolute value of num.  The direction is
-     down if the sign of num is negative, otherwise the direction is up.
-  *)
-
-PROCEDURE SHIFT (val: <a set type>;
-                 num: INTEGER): <type of first parameter>;
-  (* Returns a bit sequence obtained from val by shifting up or down
-     (left or right) by the absolute value of num, introducing
-     zeros as necessary.  The direction is down if the sign of
-     num is negative, otherwise the direction is up.
-  *)
-*)
-
-(* The following procedures are invoked by GNU Modula-2 to
-   shift non word sized set types. They are not part of PIM Modula-2
-   but are used by GNU Modula-2 to implement the SHIFT procedure
-   defined above. *)
-
-(*
-   ShiftVal - is a runtime procedure whose job is to implement
-              the SHIFT procedure of ISO SYSTEM. GNU Modula-2 will
-              inline a SHIFT of a single WORD sized set and will only
-              call this routine for larger sets.
-*)
-
-PROCEDURE ShiftVal (VAR s, d: ARRAY OF BITSET;
-                    SetSizeInBits: CARDINAL;
-                    ShiftCount: INTEGER) ;
-
-
-(*
-   ShiftLeft - performs the shift left for a multi word set.
-               This procedure might be called by the back end of
-               GNU Modula-2 depending whether amount is known at compile
-               time.
-*)
-
-PROCEDURE ShiftLeft (VAR s, d: ARRAY OF BITSET;
-                     SetSizeInBits: CARDINAL;
-                     ShiftCount: INTEGER) ;
-
-(*
-   ShiftRight - performs the shift left for a multi word set.
-                This procedure might be called by the back end of
-                GNU Modula-2 depending whether amount is known at compile
-                time.
-*)
-
-PROCEDURE ShiftRight (VAR s, d: ARRAY OF BITSET;
-                     SetSizeInBits: CARDINAL;
-                     ShiftCount: INTEGER) ;
-
-
-(*
-   RotateVal - is a runtime procedure whose job is to implement
-               the ROTATE procedure of ISO SYSTEM. GNU Modula-2 will
-               inline a ROTATE of a single WORD (or less)
-               sized set and will only call this routine for larger sets.
-*)
-
-PROCEDURE RotateVal (VAR s, d: ARRAY OF BITSET;
-                     SetSizeInBits: CARDINAL;
-                     RotateCount: INTEGER) ;
-
-
-(*
-   RotateLeft - performs the rotate left for a multi word set.
-                This procedure might be called by the back end of
-                GNU Modula-2 depending whether amount is known at compile
-                time.
-*)
-
-PROCEDURE RotateLeft (VAR s, d: ARRAY OF BITSET;
-                      SetSizeInBits: CARDINAL;
-                      RotateCount: INTEGER) ;
-
-
-(*
-   RotateRight - performs the rotate right for a multi word set.
-                 This procedure might be called by the back end of
-                 GNU Modula-2 depending whether amount is known at compile
-                 time.
-*)
-
-PROCEDURE RotateRight (VAR s, d: ARRAY OF BITSET;
-                       SetSizeInBits: CARDINAL;
-                       RotateCount: INTEGER) ;
-
-END SYSTEM.
-@end example
+@include SYSTEM-pim.texi
 
 The different dialects of Modula-2 PIM-[234] and ISO Modula-2 declare
 the function @code{SIZE} in different places.  PIM-[34] and ISO
@@ -1557,192 +1441,7 @@ by using the @code{-fiso} and @code{-fpim2} command line switches.
 @node The ISO system module, , The PIM system module, Using
 @section The ISO system module
 
-@example
-DEFINITION MODULE SYSTEM;
-
-  (* Gives access to system programming facilities that are probably
-     non portable. *)
-
-  (* The constants and types define underlying properties of storage *)
-
-EXPORT QUALIFIED BITSPERLOC, LOCSPERWORD,
-                 LOC, BYTE, WORD, BITSET, ADDRESS,
-                 ADDADR, SUBADR, DIFADR, MAKEADR, ADR, ROTATE,
-                 SHIFT, CAST, TSIZE,
-
-                 (* Internal GM2 compiler functions *)
-                 ShiftVal, ShiftLeft, ShiftRight,
-                 RotateVal, RotateLeft, RotateRight ;
-
-CONST
-                  (* <implementation-defined constant> ; *)
-  BITSPERLOC    = __ATTRIBUTE__ __BUILTIN__ ((BITS_PER_UNIT)) ;
-                  (* <implementation-defined constant> ; *)
-  LOCSPERWORD   = __ATTRIBUTE__ __BUILTIN__ ((UNITS_PER_WORD)) ;
-                  (* <implementation-defined constant> ; *)
-  LOCSPERBYTE = 8 DIV BITSPERLOC ;
-
-(*
-   all the objects below are declared internally to gm2
-   ====================================================
-
-TYPE
-  LOC; (* A system basic type. Values are the uninterpreted
-          contents of the smallest addressable unit of storage *)
-  ADDRESS = POINTER TO LOC;
-  WORD = ARRAY [0 .. LOCSPERWORD-1] OF LOC;
-
-  (* BYTE and LOCSPERBYTE are provided if appropriate for machine *)
-
-TYPE
-  BYTE = ARRAY [0 .. LOCSPERBYTE-1] OF LOC;
-
-PROCEDURE ADDADR (addr: ADDRESS; offset: CARDINAL): ADDRESS;
-  (* Returns address given by (addr + offset), or may raise
-     an exception if this address is not valid.
-  *)
-
-PROCEDURE SUBADR (addr: ADDRESS; offset: CARDINAL): ADDRESS;
-  (* Returns address given by (addr - offset), or may raise an
-     exception if this address is not valid.
-  *)
-
-PROCEDURE DIFADR (addr1, addr2: ADDRESS): INTEGER;
-  (* Returns the difference between addresses (addr1 - addr2),
-     or may raise an exception if the arguments are invalid
-     or address space is non-contiguous.
-  *)
-
-PROCEDURE MAKEADR (high: <some type>; ...): ADDRESS;
-  (* Returns an address constructed from a list of values whose
-     types are implementation-defined, or may raise an
-     exception if this address is not valid.
-
-     In GNU Modula-2, MAKEADR can take any number of arguments
-     which are mapped onto the type ADDRESS. The first parameter
-     maps onto the high address bits and subsequent parameters map
-     onto lower address bits. For example:
-
-     a := MAKEADR(BYTE(0FEH), BYTE(0DCH), BYTE(0BAH), BYTE(098H),
-                  BYTE(076H), BYTE(054H), BYTE(032H), BYTE(010H)) ;
-
-     then the value of, a, on a 64 bit machine is: 0FEDCBA9876543210H
-
-     The parameters do not have to have the same type, but constants
-     _must_ be typed.
-  *)
-
-PROCEDURE ADR (VAR v: <anytype>): ADDRESS;
-  (* Returns the address of variable v. *)
-
-PROCEDURE ROTATE (val: <a packedset type>;
-                  num: INTEGER): <type of first parameter>;
-  (* Returns a bit sequence obtained from val by rotating up or down
-     (left or right) by the absolute value of num.  The direction is
-     down if the sign of num is negative, otherwise the direction is up.
-  *)
-
-PROCEDURE SHIFT (val: <a packedset type>;
-                 num: INTEGER): <type of first parameter>;
-  (* Returns a bit sequence obtained from val by shifting up or down
-     (left or right) by the absolute value of num, introducing
-     zeros as necessary.  The direction is down if the sign of
-     num is negative, otherwise the direction is up.
-  *)
-
-PROCEDURE CAST (<targettype>; val: <anytype>): <targettype>;
-  (* CAST is a type transfer function.  Given the expression
-     denoted by val, it returns a value of the type <targettype>.
-     An invalid value for the target value or a
-     physical address alignment problem may raise an exception.
-  *)
-
-PROCEDURE TSIZE (<type>; ... ): CARDINAL;
-  (* Returns the number of LOCS used to store a value of the
-     specified <type>.   The extra parameters, if present,
-     are used to distinguish variants in a variant record.
-  *)
-*)
-
-
-(* The following procedures are invoked by GNU Modula-2 to
-   shift non word set types. They are not part of ISO Modula-2
-   but are used by GNU Modula-2 to implement the SHIFT procedure
-   defined above. *)
-
-(*
-   ShiftVal - is a runtime procedure whose job is to implement
-              the SHIFT procedure of ISO SYSTEM. GNU Modula-2 will
-              in-line a SHIFT of a single WORD sized set and will only
-              call this routine for larger sets.
-*)
-
-PROCEDURE ShiftVal (VAR s, d: ARRAY OF BITSET;
-                    SetSizeInBits: CARDINAL;
-                    ShiftCount: INTEGER) ;
-
-
-(*
-   ShiftLeft - performs the shift left for a multi word set.
-               This procedure might be called by the back end of
-               GNU Modula-2 depending whether amount is known at compile
-               time.
-*)
-
-PROCEDURE ShiftLeft (VAR s, d: ARRAY OF BITSET;
-                     SetSizeInBits: CARDINAL;
-                     ShiftCount: INTEGER) ;
-
-(*
-   ShiftRight - performs the shift left for a multi word set.
-                This procedure might be called by the back end of
-                GNU Modula-2 depending whether amount is known at compile
-                time.
-*)
-
-PROCEDURE ShiftRight (VAR s, d: ARRAY OF BITSET;
-                     SetSizeInBits: CARDINAL;
-                     ShiftCount: INTEGER) ;
-
-
-(*
-   RotateVal - is a runtime procedure whose job is to implement
-               the ROTATE procedure of ISO SYSTEM. GNU Modula-2 will
-               in-line a ROTATE of a single WORD (or less)
-               sized set and will only call this routine for larger sets.
-*)
-
-PROCEDURE RotateVal (VAR s, d: ARRAY OF BITSET;
-                     SetSizeInBits: CARDINAL;
-                     RotateCount: INTEGER) ;
-
-
-(*
-   RotateLeft - performs the rotate left for a multi word set.
-                This procedure might be called by the back end of
-                GNU Modula-2 depending whether amount is known at compile
-                time.
-*)
-
-PROCEDURE RotateLeft (VAR s, d: ARRAY OF BITSET;
-                      SetSizeInBits: CARDINAL;
-                      RotateCount: INTEGER) ;
-
-
-(*
-   RotateRight - performs the rotate right for a multi word set.
-                 This procedure might be called by the back end of
-                 GNU Modula-2 depending whether amount is known at compile
-                 time.
-*)
-
-PROCEDURE RotateRight (VAR s, d: ARRAY OF BITSET;
-                       SetSizeInBits: CARDINAL;
-                       RotateCount: INTEGER) ;
-
-
-END SYSTEM.
-@end example
+@include SYSTEM-iso.texi
 
 @node Obtaining, Licence, Using, Top
 @chapter Obtaining GNU Modula-2.
